--- a/CLIENT/sccma/package.json
+++ b/CLIENT/sccma/package.json
@@ -17,7 +17,9 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2"
   },
