--- a/CLIENT/sccma/package.json
+++ b/CLIENT/sccma/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "bootstrap": "^5.3.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-carousel": "^4.3.0",
